# flask-wordle-solver

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
flask_wordle_solver/: __init__.py
flask_wordle_solver/static/: styles.css
flask_wordle_solver/templates/: index.html  words.html
src/flask_wordle_solver/: __init__.py
static/: autoTab.js  styles.css  wordleSolver.js
templates/: index.html  words.html
